--- a/atcoder/typ_b.html
+++ b/atcoder/typ_b.html
@@ -205,6 +205,87 @@ mark .md-meta { color: rgb(0, 0, 0); }
 mjx-container { break-inside: avoid; }
 
 
+.CodeMirror { height: auto; }
+.CodeMirror.cm-s-inner { background: inherit; }
+.CodeMirror-scroll { overflow: auto hidden; z-index: 3; }
+.CodeMirror-gutter-filler, .CodeMirror-scrollbar-filler { background-color: rgb(255, 255, 255); }
+.CodeMirror-gutters { border-right: 1px solid rgb(221, 221, 221); background: inherit; white-space: nowrap; }
+.CodeMirror-linenumber { padding: 0px 3px 0px 5px; text-align: right; color: rgb(153, 153, 153); }
+.cm-s-inner .cm-keyword { color: rgb(119, 0, 136); }
+.cm-s-inner .cm-atom, .cm-s-inner.cm-atom { color: rgb(34, 17, 153); }
+.cm-s-inner .cm-number { color: rgb(17, 102, 68); }
+.cm-s-inner .cm-def { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-variable { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-variable-2 { color: rgb(0, 85, 170); }
+.cm-s-inner .cm-variable-3 { color: rgb(0, 136, 85); }
+.cm-s-inner .cm-string { color: rgb(170, 17, 17); }
+.cm-s-inner .cm-property { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-operator { color: rgb(152, 26, 26); }
+.cm-s-inner .cm-comment, .cm-s-inner.cm-comment { color: rgb(170, 85, 0); }
+.cm-s-inner .cm-string-2 { color: rgb(255, 85, 0); }
+.cm-s-inner .cm-meta { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-qualifier { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-builtin { color: rgb(51, 0, 170); }
+.cm-s-inner .cm-bracket { color: rgb(153, 153, 119); }
+.cm-s-inner .cm-tag { color: rgb(17, 119, 0); }
+.cm-s-inner .cm-attribute { color: rgb(0, 0, 204); }
+.cm-s-inner .cm-header, .cm-s-inner.cm-header { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-quote, .cm-s-inner.cm-quote { color: rgb(0, 153, 0); }
+.cm-s-inner .cm-hr, .cm-s-inner.cm-hr { color: rgb(153, 153, 153); }
+.cm-s-inner .cm-link, .cm-s-inner.cm-link { color: rgb(0, 0, 204); }
+.cm-negative { color: rgb(221, 68, 68); }
+.cm-positive { color: rgb(34, 153, 34); }
+.cm-header, .cm-strong { font-weight: 700; }
+.cm-del { text-decoration: line-through; }
+.cm-em { font-style: italic; }
+.cm-link { text-decoration: underline; }
+.cm-error { color: red; }
+.cm-invalidchar { color: red; }
+.cm-constant { color: rgb(38, 139, 210); }
+.cm-defined { color: rgb(181, 137, 0); }
+div.CodeMirror span.CodeMirror-matchingbracket { color: rgb(0, 255, 0); }
+div.CodeMirror span.CodeMirror-nonmatchingbracket { color: rgb(255, 34, 34); }
+.cm-s-inner .CodeMirror-activeline-background { background: inherit; }
+.CodeMirror { position: relative; overflow: hidden; }
+.CodeMirror-scroll { height: 100%; outline: 0px; position: relative; box-sizing: content-box; background: inherit; }
+.CodeMirror-sizer { position: relative; }
+.CodeMirror-gutter-filler, .CodeMirror-hscrollbar, .CodeMirror-scrollbar-filler, .CodeMirror-vscrollbar { position: absolute; z-index: 6; display: none; outline: 0px; }
+.CodeMirror-vscrollbar { right: 0px; top: 0px; overflow: hidden; }
+.CodeMirror-hscrollbar { bottom: 0px; left: 0px; overflow: auto hidden; }
+.CodeMirror-scrollbar-filler { right: 0px; bottom: 0px; }
+.CodeMirror-gutter-filler { left: 0px; bottom: 0px; }
+.CodeMirror-gutters { position: absolute; left: 0px; top: 0px; padding-bottom: 10px; z-index: 3; overflow-y: hidden; }
+.CodeMirror-gutter { white-space: normal; height: 100%; box-sizing: content-box; padding-bottom: 30px; margin-bottom: -32px; display: inline-block; }
+.CodeMirror-gutter-wrapper { position: absolute; z-index: 4; background: 0px 0px !important; border: none !important; }
+.CodeMirror-gutter-background { position: absolute; top: 0px; bottom: 0px; z-index: 4; }
+.CodeMirror-gutter-elt { position: absolute; cursor: default; z-index: 4; }
+.CodeMirror-lines { cursor: text; }
+.CodeMirror pre { border-radius: 0px; border-width: 0px; background: 0px 0px; font-family: inherit; font-size: inherit; margin: 0px; white-space: pre; overflow-wrap: normal; color: inherit; z-index: 2; position: relative; overflow: visible; }
+.CodeMirror-wrap pre { overflow-wrap: break-word; white-space: pre-wrap; word-break: normal; }
+.CodeMirror-code pre { border-right: 30px solid transparent; width: fit-content; }
+.CodeMirror-wrap .CodeMirror-code pre { border-right: none; width: auto; }
+.CodeMirror-linebackground { position: absolute; inset: 0px; z-index: 0; }
+.CodeMirror-linewidget { position: relative; z-index: 2; overflow: auto; }
+.CodeMirror-wrap .CodeMirror-scroll { overflow-x: hidden; }
+.CodeMirror-measure { position: absolute; width: 100%; height: 0px; overflow: hidden; visibility: hidden; }
+.CodeMirror-measure pre { position: static; }
+.CodeMirror div.CodeMirror-cursor { position: absolute; visibility: hidden; border-right: none; width: 0px; }
+.CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+.CodeMirror-focused div.CodeMirror-cursor { visibility: inherit; }
+.cm-searching { background: rgba(255, 255, 0, 0.4); }
+span.cm-underlined { text-decoration: underline; }
+span.cm-strikethrough { text-decoration: line-through; }
+.cm-tw-syntaxerror { color: rgb(255, 255, 255); background-color: rgb(153, 0, 0); }
+.cm-tw-deleted { text-decoration: line-through; }
+.cm-tw-header5 { font-weight: 700; }
+.cm-tw-listitem:first-child { padding-left: 10px; }
+.cm-tw-box { border-style: solid; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-color: inherit; border-top-width: 0px !important; }
+.cm-tw-underline { text-decoration: underline; }
+@media print {
+  .CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+}
+
+
 :root {
     --side-bar-bg-color: #fafafa;
     --control-text-color: #777;
@@ -591,9 +672,12 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>index</title>
+</style><title>typ_b</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='競技プログラミング'><span>競技プログラミング</span></h1><p><span>自分用逆引き備忘録</span></p><h2 id='スニペット'><span>スニペット</span></h2><p><code>rmqmax</code><span> : Segment Tree (Max)</span></p><p><code>rmqmin</code><span> : Segment Tree (Min)</span></p><p><code>rsq</code><span> : Segment Tree (Sum)</span></p><p><code>mg</code><span> : 重み無しグラフ （DFS＝到達可能性探索、BFS＝最小移動数、メモ化再帰＝最大移動数）</span></p><p><code>mwg</code><span> : 重み有りグラフ（ダイクストラ＝移動の最小コスト、</span><code>shortestPath</code><span> ＝最小コストの道順）</span></p><p><code>uf</code><span> : Union Find（同じグループかどうか）</span></p><p><code>mf</code><span> : Maximum Flow（最大流量、最小カット）</span></p><p><code>bins</code><span> : 二分探索</span></p><p><code>doubleprintf</code><span> : 小数を標準出力に出す時</span></p><p><code>bms</code><span> : 要素の重複を許した集合を、上位と下位に分ける</span></p><p><code>mb</code><span> : Board</span></p><p><code>modint</code><span>：mint（Mod計算用の数値クラス）</span></p><p>&nbsp;</p><h2 id='bit全探索'><span>Bit全探索</span></h2><ul><li><p><a href='abc321c.html'><span>各桁が狭義の単調減少になっている数字</span></a></p><p><span>狭義の単調減少＝数字は1度しか現れない、かつ順番が一意に決まる</span></p></li></ul><h2 id='二分探索'><span>二分探索</span></h2><ul><li><p><a href='abc321d.html'><span>全てのi, jについてmin(a.at(i) + b.at(j) , p)の和</span></a></p><p><span>bをソート→iごとに p - a.at(i)をbで二分探索→手前はa + bj、以後はp </span></p></li></ul><h2 id='確率dp'><span>確率DP</span></h2><ul><li><p><a href='abc323e.html'><span>n曲あるなかからランダム再生したときの、x+0.5秒後に0曲目が流れている確率</span></a></p><p><span>1次元DP、mint使用。dp.at(i) : i秒目がちょうど曲の切れ目になっている確率。</span></p></li></ul><h2 id='グラフ系'><span>グラフ系</span></h2><ul><li><p><a href='abc305e.html'><span>多始点ダイクストラ（グラフ上の警備員と警備されている点）</span></a></p><p><span>複数のスタート地点を持つダイクストラ（っぽい）法。警備員をスタート地点として、警備員の体力だけ進める。</span></p></li></ul><h2 id='貪欲法区間スケジューリング問題）'><span>貪欲法（区間スケジューリング問題）</span></h2><ul><li><p><a href='tessoku_a039.html'><span>映画を見る</span></a></p><p><span>終了まで拘束される区間スケジューリング問題。終わりの時間を昇順でソートすれば、forループで回して良い。</span></p></li></ul><ul><li><p><a href='typ_b.html'><span>宿題をする</span></a></p><p><span>終了まで拘束される区間スケジューリング問題。上記と同様。</span></p></li></ul><ul><li><p><a href='abc325d.html'><span>ベルトコンベア上を流れる商品に1つずつ印字する</span></a></p><p><span>終了まで拘束されない区間スケジューリング問題。forループの代わりにwhileループと優先度付きキューを使う。</span></p></li></ul><h2 id='board系ポリオミノ）'><span>Board系（ポリオミノ）</span></h2><ul><li><p><a href='abc307c.html'><span>二枚のポリオミノ a, bを重ね合わせて、理想形xを作る</span></a></p><p><code>MyBoard</code><span> クラスを使って、ズラしを全探索</span></p></li><li><p><a href='abc322d.html'><span>3つのポリオミノの敷き詰め可能性</span></a></p><p><code>MyBoard</code><span> クラスを使って、回転＆ズラしを全探索</span></p></li></ul><h2 id='multiset系'><span>multiset系</span></h2><ul><li><p><a href='abc306e.html'><span>n個の配列の内、上位k個の和を求める（入れ替えあり）</span></a></p><p><span>2つのmultisetで値を行ったり来たりさせる。</span></p></li></ul><h2 id='数学的'><span>数学的</span></h2><ul><li><p><a href='abc323d.html'><span>スライムの合成をするとサイズが2倍になるときの、可能な限り合成を繰り返した時のスライムの匹数</span></a></p><p><span>根源スライムでタイプ分類＆サイズごとに0匹か1匹になるのを2進数と見なす</span></p></li></ul></div></div>
+<div id='write'  class=''><h1 id='宿題をする'><span>宿題をする</span></h1><p><span>問題：</span><a href='https://atcoder.jp/contests/typical-algorithm/tasks/typical_algorithm_b' target='_blank' class='url'>https://atcoder.jp/contests/typical-algorithm/tasks/typical_algorithm_b</a></p><p><span>解説：</span><a href='https://atcoder.jp/contests/typical-algorithm/editorial/707' target='_blank' class='url'>https://atcoder.jp/contests/typical-algorithm/editorial/707</a></p><p><span>提出：</span><a href='https://atcoder.jp/contests/typical-algorithm/submissions/46837401' target='_blank' class='url'>https://atcoder.jp/contests/typical-algorithm/submissions/46837401</a></p><pre class="md-fences md-end-block ty-contain-cm modeLoaded" spellcheck="false" lang="c++" style="break-inside: unset;"><div class="CodeMirror cm-s-inner cm-s-null-scroll CodeMirror-wrap" lang="c++"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 9.52344px; left: 8px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"></textarea></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: 0px; border-right-width: 0px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines" role="presentation"><div role="presentation" style="position: relative; outline: none;"><div class="CodeMirror-measure"><span><span>​</span>x</span></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-code" role="presentation" style=""><div class="CodeMirror-activeline" style="position: relative;"><div class="CodeMirror-activeline-background CodeMirror-linebackground"></div><div class="CodeMirror-gutter-background CodeMirror-activeline-gutter" style="left: 0px; width: 0px;"></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable-3">int</span> <span class="cm-def">main</span> () {</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-3">int</span> <span class="cm-variable">n</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">cin</span> <span class="cm-operator">&gt;&gt;</span> <span class="cm-variable">n</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">vector</span><span class="cm-operator">&lt;</span><span class="cm-variable">P</span><span class="cm-operator">&gt;</span> <span class="cm-variable">ps</span>(<span class="cm-variable">n</span>);</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">rep</span>(<span class="cm-variable">i</span>, <span class="cm-variable">n</span>) <span class="cm-variable">cin</span> <span class="cm-operator">&gt;&gt;</span> <span class="cm-variable">ps</span>.<span class="cm-variable">at</span>(<span class="cm-variable">i</span>).<span class="cm-variable">first</span> <span class="cm-operator">&gt;&gt;</span> <span class="cm-variable">ps</span>.<span class="cm-variable">at</span>(<span class="cm-variable">i</span>).<span class="cm-variable">second</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">sort</span>(<span class="cm-variable">all</span>(<span class="cm-variable">ps</span>), [](<span class="cm-keyword">const</span> <span class="cm-variable">P</span> <span class="cm-operator">&amp;</span><span class="cm-variable">left</span>, <span class="cm-keyword">const</span> <span class="cm-variable">P</span> <span class="cm-operator">&amp;</span><span class="cm-variable">right</span>){</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-keyword">if</span>(<span class="cm-variable">left</span>.<span class="cm-variable">second</span> <span class="cm-operator">==</span> <span class="cm-variable">right</span>.<span class="cm-variable">second</span>) <span class="cm-keyword">return</span> <span class="cm-variable">left</span>.<span class="cm-variable">first</span> <span class="cm-operator">&lt;</span> <span class="cm-variable">right</span>.<span class="cm-variable">first</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-keyword">else</span> <span class="cm-keyword">return</span> <span class="cm-variable">left</span>.<span class="cm-variable">second</span> <span class="cm-operator">&lt;</span> <span class="cm-variable">right</span>.<span class="cm-variable">second</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp;  });</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-3">int</span> <span class="cm-variable">ans</span> <span class="cm-operator">=</span> <span class="cm-number">0</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-3">int</span> <span class="cm-variable">time</span> <span class="cm-operator">=</span> <span class="cm-number">0</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">rep</span>(<span class="cm-variable">i</span>, <span class="cm-variable">n</span>)</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp;  {</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-keyword">if</span>(<span class="cm-variable">time</span> <span class="cm-operator">&lt;=</span> <span class="cm-variable">ps</span>.<span class="cm-variable">at</span>(<span class="cm-variable">i</span>).<span class="cm-variable">first</span>)</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp;  {</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">ans</span><span class="cm-operator">++</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span class="cm-variable">time</span> <span class="cm-operator">=</span> <span class="cm-variable">ps</span>.<span class="cm-variable">at</span>(<span class="cm-variable">i</span>).<span class="cm-variable">second</span> <span class="cm-operator">+</span> <span class="cm-number">1</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp; &nbsp;  }</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp;  }</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">cout</span> <span class="cm-operator">&lt;&lt;</span> <span class="cm-variable">ans</span> <span class="cm-operator">&lt;&lt;</span> <span class="cm-variable">endl</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;</span></pre><div class="" style="position: relative;"><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;">}</span></pre></div></div></div></div></div></div><div style="position: absolute; height: 0px; width: 1px; border-bottom: 0px solid transparent; top: 576px;"></div><div class="CodeMirror-gutters" style="display: none; height: 576px;"></div></div></div></pre><p>&nbsp;</p></div></div>
 </body>
 </html>
